spacing/sizing adjustments from MOD review

--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -76,7 +76,7 @@
         <!-- .col (main) -->
 
         <!--right-hand column for extra resources and links-->
-        <div class="col-xl-2 border-xl-left">
+        <div class="col-xl-2 border-xl-left container-to-large">
 
             <div class="py-3 mt-3 mt-xl-0 sticky-top" style="z-index: 0">
                 {{- partial "socialshare.html" . -}}
