--- a/themes/dohmh/layouts/partials/mod-related-main.html
+++ b/themes/dohmh/layouts/partials/mod-related-main.html
@@ -26,8 +26,8 @@
           </div>
 
           {{- else if eq $layout "singlelisticon" -}}
-          <a class="text-black font-weight-bold" href="{{ .RelPermalink }}">
-            <span class='text-primary data-stories'><i class='fas fa-passport' aria-hidden='true'></i></span> {{ .Title }}
+          <a class="text-black" href="{{ .RelPermalink }}">
+            <span class='text-primary data-stories mr-2'><i class='fas fa-passport' aria-hidden='true'></i></span>{{ .Title }}
           </a>
           <hr class="my-2">
 
