--- a/themes/dohmh/layouts/partials/mod-related-small.html
+++ b/themes/dohmh/layouts/partials/mod-related-small.html
@@ -10,7 +10,7 @@
         {{- if and $has_common_cats (ne $page_link $page.RelPermalink) -}}
 
           {{- if eq $layout "singlelist" -}}
-          <a class="text-black font-weight-bold" href="{{ .RelPermalink }}">
+          <a class="text-black" href="{{ .RelPermalink }}">
             {{ .Title }}
           </a>
           <hr class="my-2">
