...and pull borders

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -383,7 +383,7 @@
             
             
                 <!-- visualization elements -->
-                <div class="tab-content bg-white mb-2 border-left border-right border-top p-1" id="tabs-01-content">
+                <div class="tab-content bg-white mb-2 border-top p-1" id="tabs-01-content">
             
 
                 <!-- TABLE TAB -->
