--- a/themes/dohmh/layouts/data-features/section.html
+++ b/themes/dohmh/layouts/data-features/section.html
@@ -24,7 +24,7 @@
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-features">
                                 {{- if .Params.image -}}
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
@@ -32,9 +32,9 @@
                                 {{- else -}}
                                 <a class="" href="{{ .RelPermalink }}">
                                 <div style="width:100%; height:250px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
-                                
+
                                 {{- end -}}
-            
+
                                 <div class="card-body">
                                     <h3 class="h5"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
                                     <div class="mb-2">{{ .Content | truncate 150 }}</div>
@@ -57,22 +57,22 @@
                     <p class="home-label font-weight-bold">Reports</p>
                     <div class="row">
                         {{ range where .Pages "Params.hide" "ne" true }}
-    
+
                             {{- if .Params.report -}}
                             <div class="card content-card mb-4 col-sm-6 col-md-3">
                                 <div class="card-content data-features">
                                     {{- if .Params.image -}}
-                                    <a href="{{ .RelPermalink}}">
+                                    <a class="w-100" href="{{ .RelPermalink}}">
                                         {{ $src := .Resources.GetMatch .Params.image }}
                                         {{ $image := $src.Resize "740x"}}
                                         <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
                                     </a>
                                     {{- else -}}
-                                    <a class="" href="{{ .RelPermalink }}">
+                                    <a class="w-100" href="{{ .RelPermalink }}">
                                     <div style="width:100%; height:250px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
-                                    
+
                                     {{- end -}}
-                
+
                                     <div class="card-body">
                                         <h3 class="h5"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
                                         <div class="mb-2 fs-sm">{{ .Content | plainify | truncate 150 }}</div>
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                             {{- end -}}
-    
+
                         {{- end -}}
                     </div>
                 </div>
@@ -95,21 +95,21 @@
                     <p class="home-label font-weight-bold">Portals</p>
                     <div class="row">
                         {{ range where .Pages "Params.hide" "ne" true }}
-    
+
                             {{- if .Params.externalPortal -}}
                             <div class="card content-card mb-4 col-sm-6 col-md-3">
                                 <div class="card-content card-body">
                                     {{- if .Params.image -}}
                                         {{ $src := .Resources.GetMatch .Params.image }}
-                                        
-                        
+
+
                                         {{ $image := $src.Resize "740x"}}
-                                        <a class="" href="{{ .RelPermalink }}">
+                                        <a class="w-100" href="{{ .RelPermalink }}">
                                         <div style="width:100%; height:150px; background-image: URL({{ $image.Permalink }}); background-size: cover"></div></a>
                                     {{- else -}}
-                                        <a class="" href="{{ .RelPermalink }}">
+                                        <a class="w-100" href="{{ .RelPermalink }}">
                                         <div style="width:100%; height:150px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
-                                        
+
                                     {{- end -}}
                                     <h4 class="fs-md mt-1"><a class="" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h4>
                                     <p class="fs-sm">{{ .Content | plainify | truncate 175 | htmlUnescape }}
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                             {{- end -}}
-    
+
                         {{- end -}}
                     </div>
                 </div>
@@ -126,7 +126,7 @@
             </div>
 
 
-        </div> 
+        </div>
     </div>
 
 
