--- a/themes/dohmh/layouts/data-stories/section.html
+++ b/themes/dohmh/layouts/data-stories/section.html
@@ -33,7 +33,7 @@
         {{- range first 3 ((where .Site.RegularPages "Section" "data-stories")) -}}
         <div class="card content-card mb-4 col-sm-6 col-md-4">
             <div class="card-content data-stories">
-                <a href="{{ .RelPermalink}}">
+                <a class="w-100" href="{{ .RelPermalink}}">
                     {{ $src := .Resources.GetMatch .Params.image }}
                     {{ $image := $src.Resize "740x"}}
                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -96,7 +96,7 @@
                         {{- range .RegularPages -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100"  href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -120,7 +120,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "airquality") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -144,7 +144,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "transportation") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -168,7 +168,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "social") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -192,7 +192,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "climatehealth") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -216,7 +216,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "housing") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -240,7 +240,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "foodanddrink") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
@@ -264,7 +264,7 @@
                         {{- range where .RegularPages "Params.categories" "intersect" (slice "internal") -}}
                         <div class="card content-card mb-4 col-sm-6 col-md-4">
                             <div class="card-content data-stories">
-                                <a href="{{ .RelPermalink}}">
+                                <a class="w-100" href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
                                     {{ $image := $src.Resize "740x"}}
                                     <div style="width:100%; height:250px; background-image: URL({{ $image.RelPermalink }}); background-size: cover"></div>
