--- a/themes/dohmh/layouts/components.html
+++ b/themes/dohmh/layouts/components.html
@@ -28,7 +28,7 @@ SECTION-SPECIFIC CARDS WITH SECTION-COLOR ON THE BOTTOM BORDER:
 <div class="card content-card mb-4 col-sm-6 col-md-4">
     <div class="card-content data-features">
         {{- if .Params.image -}}
-        <a class="w-100" href="{{ .RelPermalink}}">
+        <a href="{{ .RelPermalink}}">
             {{ $src := .Resources.GetMatch .Params.image }}
             {{ $image := $src.Resize "740x"}}
             <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
@@ -75,7 +75,7 @@ This is like the section-specific card, but uses the primary green. Use this for
 
 <div class="card content-card mb-4 col-sm-6 col-md-4">
     <div class="card-content primary">
-        <a class="w-100" href="{{ .RelPermalink}}">
+        <a href="{{ .RelPermalink}}">
             {{ $src := .Resources.GetMatch .Params.image }}
             {{ $image := $src.Resize "740x"}}
             <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
