icon spacing tweak

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -274,7 +274,7 @@
 
                     <a class="nav-item nav-link active fs-sm tab-border" id="tab-btn-02-a" href="#tab-02-a" data-toggle="tab"
                         aria-controls="tab-02-a" aria-selected="true" role="tab">
-                        <i class="fas fa-list fa-fw" aria-hidden="true"></i>Datasets
+                        <i class="fas fa-list fa-fw mr-1" aria-hidden="true"></i>Datasets
                     </a>
                 
                     <a class="nav-item nav-link fs-sm tab-border" id="tab-btn-02-b" href="#tab-02-b" data-toggle="tab"
