--- a/themes/dohmh/layouts/data-features/aqe.html
+++ b/themes/dohmh/layouts/data-features/aqe.html
@@ -103,11 +103,11 @@
                         meter, or μg/m<sup>3</sup>), but short-term concentrations sometimes exceed this threshold.</p>
 
                 </div>
-                <div class="col-sm-7 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <div class="" style="width:100%;height:150px;" id="PMDestination">Chart</div>
                 </div>
-                <div class="col-2 ml-auto">
-                    <p class="mt-3"><span class="home-label font-weight-bold" id="youLabel1">Your neighborhood:</span></p>
+                <div class="col-3 ml-auto">
+                    <p class="mt-3"><span class="home-label font-weight-bold yourN" id="youLabel1">Your neighborhood:</span></p>
                     <p><span class="home-label">NYC average:</span></p>
                     <p><span class="home-label">EPA standard:</span></p>
                 </div>
@@ -126,11 +126,11 @@
                         concentrations sometimes exceed this threshold.</p>
                 </div>
 
-                <div class="col-sm-7 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <div class="" style="width:100%;height:150px;" id="NODestination">Chart</div>
                 </div>
-                <div class="col-2 ml-auto">
-                    <p class="mt-2"><span class="home-label font-weight-bold" id="youLabel2">Your neighborhood:</span></p>
+                <div class="col-3 ml-auto">
+                    <p class="mt-2"><span class="home-label font-weight-bold yourN" id="youLabel2">Your neighborhood:</span></p>
                     <p><span class="home-label">NYC average:</span></p>
                     <p><span class="home-label">EPA standard:</span></p>
                 </div>
