--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -69,8 +69,8 @@
     } */
 
     .dropdown-title {
-        padding: 0.25rem 1.5rem;
-        font-size: 1.04rem;
+        padding: 0.25rem ;
+        font-size: 13px;
         white-space: nowrap;
     }
 
@@ -129,6 +129,11 @@
     /* strikethrough if unavailable */
 
     .dropdown-menu .dropdown-item.unavailable {
+        text-decoration: line-through;
+        text-decoration-thickness: 0.15rem;
+    }
+
+    .dropdown-item.unavailable {
         text-decoration: line-through;
         text-decoration-thickness: 0.15rem;
     }
@@ -233,7 +238,80 @@
         }
 
         .nav-pills .nav-item:hover:not(.active) {
-            background-color: #fafafa;
+            /* background-color: #fafafa;
+            */
+        }
+
+        .optionbox {
+            max-height:150px;
+            overflow-y:scroll;
+            overflow-x:hidden
+        }
+    
+        .optionbox-lg {
+            max-height: 300px;
+            overflow-y: scroll;
+            overflow-x:hidden;
+        }
+    
+        .nav-pills .nav-item {
+            text-align: left!important;
+            /*background-color: #e9ecef!important; */
+        }
+    
+        .nav-pills .nav-link.active {
+            background-color: green!important;
+        }
+    
+        .dropdown-item {
+            font-size: 12px;
+            padding: 0px!important;
+            padding-left: 5px!important;
+            margin-bottom: 3px!important;
+        }
+    
+        .dropdown-item.active {
+            background-color: green!important;
+            color: white;
+            font-weight: bold;
+        }
+    
+        .debg {
+            background-color: #e9ecef!important;
+            width: 100%; 
+            height: 52px;
+        }
+    
+        .nav-tabs .nav-item.active {
+            background-color: #00923E50!important;
+            border-left: 1px solid !important;
+            border-right: 1px solid !important;
+            border-top: 1px solid !important;
+            border-bottom: 0px solid !important;
+        }
+    
+        .tab-pane {
+            /* border-left: 1px solid !important;
+            border-right: 1px solid !important;
+            border-bottom: 1px solid !important;
+            */
+        }
+    
+        .helper {
+            cursor: pointer;
+        }
+    
+        .helper:hover {
+            color: purple!important;
+        }
+
+        /* Customize table css */
+        table.dataTable tbody th,table.dataTable tbody td {
+            padding: 5px!important;
+        }
+
+        table {
+            font-size: .875rem!important; 
         }
 
     </style>
@@ -263,7 +341,7 @@
 
     <div class="row no-gutters px-0">
     
-        <div class="col-lg-4 col-md-12 pr-1">
+        <div class="col-lg-4 col-md-12 pr-2">
             <!-- About button only on mobile-->
             <button class="btn btn-sm btn-outline-light text-primary btn-block d-lg-none mt-0 mb-2" type="button"
                     data-toggle="modal" data-target="#aboutModal">About {{ .Title }}</button>
@@ -283,7 +361,7 @@
                     </a>
                 </div>
                 
-                <div class="tab-content l-green-border de-dash-borderbottom" id="tabs-02-content">
+                <div class="tab-content  de-dash-borderbottom" id="tabs-02-content">
                 
                     <div class="tab-pane fade show active" id="tab-02-a" aria-labelledby="tab-btn-02-a"
                         role="tabpanel">
@@ -319,7 +397,7 @@
 
         </div>
         
-        <div class="col-lg-7 mx-auto col-md-12">
+        <div class="col-lg-8 mx-auto col-md-12">
         
             <!-- Indicator selection (mobile) -->
             <div class="dropdown d-lg-none">
@@ -378,6 +456,10 @@
                         <span class="home-label-nc font-weight-bold ">Correlate</span>
                     </div>
                 </a>
+
+                <a class="ml-auto mt-auto p-1 fs-sm float-right" id="viewDescription">
+                    View description content here.
+                </a>
         
             </div>
             
@@ -389,11 +471,44 @@
                 <!-- TABLE TAB -->
 
                 <div class="tab-pane fade show active pt-2" id="tab-table" aria-labelledby="tab-btn-table" role="tabpanel">
-                    <div class="dropdown">
+                    <div class="row">
+                        <div class="col-md-2 pl-1 border-right">
+
+                                <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i></button>Boundaries:</p>
+                                <div class="border py-1 mb-2 optionbox">
+
+                                    <div class="" aria-labelledby="dropdownTableGeos">
+                                        <!-- INSERT MENU ITEMS HERE -->
+                                    </div>
+                                </div>
+
+                                <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Available times:</p>
+                                <div class="border py-1 mb-2 optionbox">
+                                    <div class="" aria-labelledby="dropdownTableTimes">
+                                        <!-- INSERT MENU ITEMS HERE -->
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        <div class="col-md-10">
+                            <span id="tableTitle" class="home-label border-bottom"></span>
+                            <div id="summary-table" class="" style="height:560px!important">
+                                <!-- INSERT SUMMARY TABLE HERE -->
+                            </div>
+
+                            <div id="table-unreliability" class="pt-2 asidebox hide my-1">
+                                <!-- INSERT UNRELIABILITY FLAGS HERE -->
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- old table buttons -->
+                    <div class="dropdown hide">
                         <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
                                 id="dropdownTableTimes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Time </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownTableTimes">
-                            <!-- INSERT MENU ITEMS HERE -->
+                            Menu items
                         </div>
                     </div>
             
@@ -401,19 +516,11 @@
                         <button class="btn btn-sm mr-1 float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
                                 id="dropdownTableGeos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Geography </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownTableGeos">
-                            <!-- INSERT MENU ITEMS HERE -->
+                            Menu items
                         </div>
                     </div>
+                    
             
-                    <span id="tableTitle" class="home-label border-bottom"></span>
-                    <div id="summary-table" class="" style="height:650px!important">
-                        <!-- INSERT SUMMARY TABLE HERE -->
-                    </div>
-
-                    <div id="table-unreliability" class="pt-2 asidebox hide my-1">
-                        <!-- INSERT UNRELIABILITY FLAGS HERE -->
-                    </div>
-
                 </div>
             
 
@@ -421,11 +528,45 @@
 
                 <div class="tab-pane fade pt-2" id="tab-map" aria-labelledby="tab-btn-map" role="tabpanel">
 
-                    <div class="dropdown">
+                    <div class="row">
+                        <div class="col-md-2 pl-1 border-right">
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
+                            <div class="border optionbox py-1 mb-2">
+                                <div class="" aria-labelledby="dropdownMapMeasures">
+                                    <!-- INSERT MENU ITEMS HERE -->
+                                </div>
+                            </div>
+
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Available times:</p>
+                            <div class="border optionbox py-1 mb-2">
+                                <div class="" aria-labelledby="dropdownMapTimes">
+                                    <!-- INSERT MENU ITEMS HERE -->
+                                </div>
+                            </div>
+
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Boundaries:</p>
+                            <div class="border py-1 mb-2 optionbox">
+                                <div class="" aria-labelledby="dropdownMapGeos">
+                                    <!-- INSERT MENU ITEMS HERE -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-10">
+                            <div id="map" class="vis-bucket"></div>
+
+                            <div id="map-unreliability" class="pt-2 asidebox hide my-1">
+                                <!-- INSERT UNRELIABILITY FLAGS HERE -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- old map buttons -->
+                    <div class="dropdown hide">
                         <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
                             id="dropdownMapTimes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Time period </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMapTimes">
-                            <!-- INSERT MENU ITEMS HERE -->
+                            INSERT MENU ITEMS HERE 
                         </div>
 
                     </div>
@@ -435,7 +576,7 @@
                         <button class="btn btn-sm mr-1 float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
                                 id="dropdownMapGeos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Boundaries </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMapGeos">
-                            <!-- INSERT MENU ITEMS HERE -->
+                             INSERT MENU ITEMS HERE 
                         </div>
                     </div>
 
@@ -443,16 +584,13 @@
                         <button class="btn btn-sm mr-1 float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
                             id="dropdownMapMeasures" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Show as </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMapMeasures">
-                            <!-- INSERT MENU ITEMS HERE -->
+                            INSERT MENU ITEMS HERE 
                         </div>
 
                     </div>
+                -
                 
-                    <div id="map" class="vis-bucket"></div>
 
-                    <div id="map-unreliability" class="pt-2 asidebox hide my-1">
-                        <!-- INSERT UNRELIABILITY FLAGS HERE -->
-                    </div>
 
                 </div>
             
@@ -461,24 +599,42 @@
 
                 <div class="tab-pane fade pt-2" id="tab-trend" aria-labelledby="tab-btn-trend" role="tabpanel">
 
-                    <div class="dropdown dropdownTrendComparisons">
+                    <div class="row">
+                        <div class="col-md-2 pl-1 border-right">
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show by:</p>
+                            <div class="border optionbox">
+                                <div class="" aria-labelledby="dropdownTrendComparisons">
+                                    <!-- INSERT MENU ITEMS HERE -->
+                                </div>
+                            </div>
 
-                        <!-- comparisons button -->
+                        </div>
+
+                        <div class="col-md-10">
+                                 <!-- INSERT TREND CHART HERE -->
+                                <div id="trend" class="vis-bucket"></div>
+
+                                <div id="trend-unreliability" class="pt-2 asidebox hide my-1">
+                                    <!-- INSERT UNRELIABILITY FLAGS HERE -->
+                                </div>
+
+                        </div>
+                    </div>
+
+                    <!-- old Comparisons buttons -->
+                    <div class="dropdown dropdownTrendComparisons hide">
+
                         <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle btn-comparisons mb-1" type="button"
                                 id="dropdownTrendComparisons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Compare by </button>
                         
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownTrendComparisons">
-                            <!-- INSERT MENU ITEMS HERE -->
+                            <!-- Inset menu items here -->
                         </div>
             
                     </div>
+                     
 
-                    <!-- INSERT TREND CHART HERE -->
-                    <div id="trend" class="vis-bucket"></div>
 
-                    <div id="trend-unreliability" class="pt-2 asidebox hide my-1">
-                        <!-- INSERT UNRELIABILITY FLAGS HERE -->
-                    </div>
 
                 </div>
             
@@ -486,8 +642,55 @@
                 <!-- LINKS TAB -->
 
                 <div class="tab-pane fade pt-2" id="tab-links" aria-labelledby="tab-btn-links" role="tabpanel">
-                    <div class="dropdown">
 
+                    <div class="row">
+                        <div class="col-md-2 pl-1 border-right">
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
+                            
+                            <!--
+                            <div class="border optionbox">
+                                <button class="dropdown-item pl-2">Disparities</button>
+                                <button class="dropdown-item pl-2">Correlates</button>
+                            </div>
+                            -->
+
+                            
+                            <div class="mb-2">
+                                <div class="btn-group btn-group-toggle btn-toggle-disparities " data-toggle="buttons">
+
+                                    <label class="btn btn-sm btn-block btn-outline-primary mb-0" id="show-disparities">
+                                        <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
+                                    </label>
+                                    <label class="btn btn-sm btn-block btn-outline-primary active mt-0" id="show-links">
+                                        <input type="radio" name="options" id="links-btn" autocomplete="off" checked> Correlates
+                                    </label>
+
+                                </div>
+                            </div>
+
+                            <p class="fs-xs mb-0"><i class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Link with:</p>
+                            <div class="border px-1 optionbox-lg">
+                                <div class="" aria-labelledby="dropdownLinksMeasures">
+                                    <!-- INSERT MENU ITEMS HERE -->
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-10">
+                            <span id="linksTitle" class="home-label border-bottom"></span>
+                            <!-- INSERT LINKS CHART HERE -->
+                            <div id="links" class="vis-bucket"></div>
+        
+                            <div id="links-unreliability" class="pt-2 asidebox hide my-1">
+                                <!-- INSERT UNRELIABILITY FLAGS HERE -->
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- old links buttons -->
+                    <div class="dropdown hide">
 
                         <!-- disparities button - display style changed to show or hide (currently hidden full time due to glitch on percents-->
 
@@ -513,13 +716,7 @@
                         </div>
                         
                     </div>
-                    <span id="linksTitle" class="home-label border-bottom"></span>
-                    <!-- INSERT LINKS CHART HERE -->
-                    <div id="links" class="vis-bucket"></div>
 
-                    <div id="links-unreliability" class="pt-2 asidebox hide my-1">
-                        <!-- INSERT UNRELIABILITY FLAGS HERE -->
-                    </div>
 
                 </div>
                 </div>
