table sizing tweak

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -668,7 +668,7 @@
                                 </div>
                             </div>
 
-                            <p class="fs-xs mb-0">Show links to:</p>
+                            <p class="fs-xs mb-0">Correlate with:</p>
                             <div class="border optionbox-lg">
                                 <div class="" aria-labelledby="dropdownLinksMeasures">
                                     <!-- INSERT MENU ITEMS HERE -->
@@ -907,9 +907,7 @@
                      <div class="modal-body">
                          <p>We try to make data avialable as soon as we can.</p>
                          <p>Many datasets take a long time to reach us - a 'lag' of several years, during which data are gathered from different entities to try to create a complete dataset; data are processed (cleaned, deduplicated, etc), and analyzed. It can take several years to prepare a dataset - so a dataset that is several years old is sometimes the most up-to-date information available.</p>
-                         <hr>
                          <p>We also try to display datasets that have been available for many years. Some datasets (like those that are asked on surveys) are not asked every year of the survey, which means that we cannot provide annual data.</p>
-                         <hr>
                          <p>For some datasets, we have to aggregate time periods in order to break down data by borough or neighborhood.</p>
                      </div>
                      <div class="modal-footer">
