change view text

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -461,8 +461,8 @@
                     </div>
                 </a>
 
-                <a class="ml-auto mt-auto p-1 fs-sm float-right d-none d-lg-block" id="viewDescription">
-                    View description content here.
+                <a class="ml-auto mt-auto p-1 fs-sm float-right d-none d-xl-block" id="viewDescription">
+                    Click tabs for more data views.
                 </a>
         
             </div>
