table header style

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -35,7 +35,7 @@
     /* Set font-size for table headers */
     #summary-table table thead tr th {
         font-size: 12px!important;
-        color: green;
+        color: #4b4b4b;;
     }
 
     /* This CSS controls read more/show less toggle. */
